// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio renders as expected when passing a different className 1`] = `
[
  <input
    checked={true}
    className="lab-radio lab-radio--purple"
    id="test-radio"
    name="test-radio"
    onChange={[Function]}
    type="radio"
    value="radio1"
  />,
  <label
    className="lab-radio__label"
    htmlFor="test-radio"
  >
    <span
      className="lab-radio__container"
    />
    test radio
  </label>,
]
`;

exports[`Radio renders as expected when passing disabled as true 1`] = `
[
  <input
    className="lab-radio "
    disabled={true}
    id="test-radio"
    name="test-radio"
    onChange={[Function]}
    type="radio"
    value="radio1"
  />,
  <label
    className="lab-radio__label"
    htmlFor="test-radio"
  >
    <span
      className="lab-radio__container"
    />
    test radio
  </label>,
]
`;

exports[`Radio renders with base props 1`] = `
[
  <input
    className="lab-radio "
    id="test-radio"
    name="test-radio-group"
    onChange={[Function]}
    type="radio"
    value="radio1"
  />,
  <label
    className="lab-radio__label"
    htmlFor="test-radio"
  >
    <span
      className="lab-radio__container"
    />
    test radio
  </label>,
]
`;
